# eigenos

./: .env.example  .eslintrc.js  .gitignore  README.md  TESTING_GUIDE.md  electron-builder.json  jest.config.js  package-lock.json  package-original.json  package.json  requirements.txt  test-optimization.js  test-script.js  tsconfig.json  tsconfig.renderer.json  webpack.renderer.config.js
quantum-sim-native/: Cargo.toml  index.node  package-lock.json  package.json
quantum-sim-native/src/: gates.rs  lib.rs  quantum_state.rs
renderer/: index.html
scripts/: quantum-provider-setup.sh  validate-providers.js
src/: app.service.ts  main-simple.js  main.ts  preload.ts
src/cli/: config-cli.ts
src/config/: configuration.service.ts  environment.config.ts  index.ts
src/core/: config-manager.ts  quantum-os-real.ts  quantum-os.ts
src/database/: database.service.ts
src/database/entities/: quantum-circuit.entity.ts  quantum-device.entity.ts  quantum-job.entity.ts  user.entity.ts
src/quantum/backends/: base-backend.ts
src/quantum/bridges/: python-bridge.ts
src/quantum/core/: circuit.ts  native-simulator.ts
src/quantum/hardware/: types.ts
src/quantum/optimization/: advanced-optimizer.ts  test-optimizer.ts  types.ts
src/quantum/providers/: quantum-provider-factory.ts  quantum-provider.interface.ts
src/quantum/scheduler/: quantum-scheduler.ts
src/renderer/: index.html  index.tsx
src/renderer/components/: QuantumOSApp.tsx
src/renderer/contexts/: QuantumContext.tsx  ThemeContext.tsx
src/utils/: logger.ts
tests/: setup.ts
(+40 files in other folders)
