[package]
name = "quantum-sim-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = "1.0"
nalgebra = { version = "0.32", features = ["serde-serialize", "std"] }
rayon = "1.7"
num-complex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"

[build-dependencies]
neon-build = "0.10"
